--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-paper": "^4.12.1",
