--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-image-picker": "^4.8.1",
     "react-native-paper": "^4.12.1",
     "react-native-vector-icons": "^9.1.0"
   },
